// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correct task identifier should replace the tags matches expected output: emptyTags.md 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
<!-- AUTOMATOR:TEST_FIXTURE_1 --><!-- /AUTOMATOR:TEST_FIXTURE_1 -->

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
<!-- AUTOMATOR:TEST_FIXTURE_1 -->
replaced content 🎉
<!-- /AUTOMATOR:TEST_FIXTURE_1 -->

`;

exports[`correct task identifier should replace the tags matches expected output: missingTags.md 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
just a regular text 🤓

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
just a regular text 🤓

`;

exports[`correct task identifier should replace the tags matches expected output: multipleTags.md 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
<!-- AUTOMATOR:TEST_FIXTURE_1 -->
replace me please
<!-- /AUTOMATOR:TEST_FIXTURE_1 -->

<!-- AUTOMATOR:TEST_FIXTURE_1 -->
and me too!
<!-- /AUTOMATOR:TEST_FIXTURE_1 -->

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
<!-- AUTOMATOR:TEST_FIXTURE_1 -->
replaced content 🎉
<!-- /AUTOMATOR:TEST_FIXTURE_1 -->

<!-- AUTOMATOR:TEST_FIXTURE_1 -->
replaced content 🎉
<!-- /AUTOMATOR:TEST_FIXTURE_1 -->

`;

exports[`correct task identifier should replace the tags matches expected output: nonEmptyTags.md 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
a <!-- AUTOMATOR:TEST_FIXTURE_1 --> b <!-- /AUTOMATOR:TEST_FIXTURE_1 --> c

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
a <!-- AUTOMATOR:TEST_FIXTURE_1 -->
replaced content 🎉
<!-- /AUTOMATOR:TEST_FIXTURE_1 --> c

`;

exports[`unknown task identifier should return unchanged input matches expected output: emptyTags.md 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
<!-- AUTOMATOR:TEST_FIXTURE_1 --><!-- /AUTOMATOR:TEST_FIXTURE_1 -->

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
<!-- AUTOMATOR:TEST_FIXTURE_1 --><!-- /AUTOMATOR:TEST_FIXTURE_1 -->

`;

exports[`unknown task identifier should return unchanged input matches expected output: missingTags.md 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
just a regular text 🤓

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
just a regular text 🤓

`;

exports[`unknown task identifier should return unchanged input matches expected output: multipleTags.md 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
<!-- AUTOMATOR:TEST_FIXTURE_1 -->
replace me please
<!-- /AUTOMATOR:TEST_FIXTURE_1 -->

<!-- AUTOMATOR:TEST_FIXTURE_1 -->
and me too!
<!-- /AUTOMATOR:TEST_FIXTURE_1 -->

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
<!-- AUTOMATOR:TEST_FIXTURE_1 -->
replace me please
<!-- /AUTOMATOR:TEST_FIXTURE_1 -->

<!-- AUTOMATOR:TEST_FIXTURE_1 -->
and me too!
<!-- /AUTOMATOR:TEST_FIXTURE_1 -->

`;

exports[`unknown task identifier should return unchanged input matches expected output: nonEmptyTags.md 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
a <!-- AUTOMATOR:TEST_FIXTURE_1 --> b <!-- /AUTOMATOR:TEST_FIXTURE_1 --> c

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
a <!-- AUTOMATOR:TEST_FIXTURE_1 --> b <!-- /AUTOMATOR:TEST_FIXTURE_1 --> c

`;
